--- a/yaji.html
+++ b/yaji.html
@@ -1,14 +1,33 @@
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 TRANSITIONAL//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+
 <html>
 
 
 <head>
+        <title>野次ツイートジェネレータ</title>
+        <style type="text/css">
+        .button{
+                color: white;
+                text-align: center;
+                width: 100px;
+                border-bottom: 2px solid darkblue;
+                border-top: 2px solid darkblue;
+                border-left: 2px solid darkblue;
+                border-right: 2px solid darkblue;
+                background: #00acee
+                bouder-radius: 10px
+        }
+        </style>
+</head>
 <body>
-	<h1>野次ツイートジェネレータ</h1>
-	<p>ボタンを押すとランダムで野次ツイートが準備されます。</p>
-	<div class="button">野次る</div>
-	<p>作成者：さらりどん<br>
-	<a href="https://twitter.com/donsarari">Twitter:@donsarari</a>
-	</p>
+        <h1>野次ツイートジェネレータ</h1>
+        <p>ボタンを押すとランダムで野次ツイートが準備されます。</p>
+        <div class="button">野次る</div>
+        <p>作成者：さらりどん<br>
+        <a href="https://twitter.com/donsarari">Twitter:@donsarari</a>
+        </p>
 </body>
 
 
