--- a/yaji.html
+++ b/yaji.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 TRANSITIONAL//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 
@@ -8,7 +7,7 @@
 <head>
         <title>野次ツイートジェネレータ</title>
         <style type="text/css">
-        .button{
+        p.button{
                 color: white;
                 text-align: center;
                 width: 100px;
@@ -24,7 +23,7 @@
 <body>
         <h1>野次ツイートジェネレータ</h1>
         <p>ボタンを押すとランダムで野次ツイートが準備されます。</p>
-        <div class="button">野次る</div>
+        <p class="button">野次る</p>
         <p>作成者：さらりどん<br>
         <a href="https://twitter.com/donsarari">Twitter:@donsarari</a>
         </p>
