background-color fixed

--- a/yaji.html
+++ b/yaji.html
@@ -15,7 +15,7 @@
                 border-top: 2px solid darkblue;
                 border-left: 2px solid darkblue;
                 border-right: 2px solid darkblue;
-                background: #00acee
+                background-color: #00acee
                 bouder-radius: 10px
         }
         </style>
