--- a/yaji.html
+++ b/yaji.html
@@ -15,8 +15,8 @@
                 border-top: 2px solid darkblue;
                 border-left: 2px solid darkblue;
                 border-right: 2px solid darkblue;
-                background-color: #00acee
-                bouder-radius: 10px
+                background-color: #00acee;
+                bouder-radius: 10px;
         }
         </style>
 </head>
