--- a/yaji.html
+++ b/yaji.html
@@ -16,7 +16,7 @@
                 border-left: 2px solid darkblue;
                 border-right: 2px solid darkblue;
                 background-color: #00acee;
-                bouder-radius: 10px;
+                border-radius: 10px;
         }
         </style>
 </head>
