--- a/yaji.html
+++ b/yaji.html
@@ -11,12 +11,12 @@
                 color: white;
                 text-align: center;
                 width: 100px;
-                border-bottom: 2px solid darkblue;
-                border-top: 2px solid darkblue;
-                border-left: 2px solid darkblue;
-                border-right: 2px solid darkblue;
+                border-bottom: 1px solid white;
+                border-top: 1px solid white;
+                border-left: 1px solid white;
+                border-right: 1px solid white;
                 background-color: #00acee;
-                border-radius: 10px;
+                border-radius: 5px;
         }
         </style>
 </head>
