--- a/yaji.html
+++ b/yaji.html
@@ -23,7 +23,8 @@
 <body>
         <h1>野次ツイートジェネレータ</h1>
         <p>ボタンを押すとランダムで野次ツイートが準備されます。</p>
-        <p class="button">野次る</p>
+        <p class="button">やじる！</p>
+	<script type="text/python" src="static/button.py"></script>
         <p>作成者：さらりどん<br>
         <a href="https://twitter.com/donsarari">Twitter:@donsarari</a>
         </p>
