--- a/yaji.html
+++ b/yaji.html
@@ -1,10 +1,9 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 TRANSITIONAL//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
-
-<html>
+<!DOCTYPE html>
+<html lang="ja">
 
 
 <head>
+	<meta charset="utf-8">
         <title>野次ツイートジェネレータ</title>
         <style type="text/css">
         p.button{
@@ -17,6 +16,7 @@
                 border-right: 1px solid white;
                 background-color: #00acee;
                 border-radius: 5px;
+		cursor: pointer;
         }
         </style>
 </head>
